syntax_analyser/simple_java.output
Terminals unused in grammar

   BOOLEAN


Grammar

    0 $accept: program $end

    1 program: mainClass classDeclarations

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    3 classDeclarations: /* empty */
    4                  | classDeclaration classDeclarations

    5 classDeclaration: CLASS ID '{' var_declarations method_declarations '}'
    6                 | CLASS ID EXTENDS ID '{' var_declarations method_declarations '}'

    7 var_declarations: /* empty */
    8                 | var_declaration var_declarations

    9 var_declaration: type ID ';'

   10 method_declarations: /* empty */
   11                    | method_declaration method_declarations

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements RETURN expression ';' '}'

   13 statements: /* empty */
   14           | statement statements

   15 statement: '{' statements '}'
   16          | assignment ';'
   17          | IF '(' expression ')' statement ELSE statement
   18          | WHILE '(' expression ')' statement
   19          | SYSPRINT '(' expression ')' ';'
   20          | ID '[' expression ']' statement ';'

   21 type: INT_TYPE '[' ']'
   22     | BOOLEAN_TYPE
   23     | STRING_TYPE
   24     | INT_TYPE

   25 arguements: /* empty */
   26           | arguement ',' arguements
   27           | arguement

   28 arguement: type ID

   29 assignment: ID ASSIGN expression

   30 expression: expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression AND expression
   34           | expression LT expression
   35           | expression '[' expression ']'
   36           | expression '.' LENGTH
   37           | expression '.' ID '(' expression_list ')'
   38           | INTEGER
   39           | TRUE
   40           | FALSE
   41           | ID
   42           | THIS
   43           | NEW INT_TYPE '[' expression ']'
   44           | NEW ID '(' ')'
   45           | '!' expression
   46           | '(' expression ')'

   47 expression_list: /* empty */
   48                | expression ',' expression_list
   49                | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'(' (40) 2 12 17 18 19 37 44 46
')' (41) 2 12 17 18 19 37 44 46
'*' (42) 32
'+' (43) 30
',' (44) 26 48
'-' (45) 31
'.' (46) 36 37
';' (59) 9 12 16 19 20
'[' (91) 2 20 21 35 43
']' (93) 2 20 21 35 43
'{' (123) 2 5 6 12 15
'}' (125) 2 5 6 12 15
error (256)
INTEGER (258) 38
BOOLEAN (259)
ID (260) 2 5 6 9 12 20 28 29 37 41 44
CLASS (261) 2 5 6
EXTENDS (262) 6
PUBLIC (263) 2 12
STATIC (264) 2
MAIN (265) 2
IF (266) 17
WHILE (267) 18
TRUE (268) 39
FALSE (269) 40
NEW (270) 43 44
THIS (271) 42
VOID (272) 2
RETURN (273) 12
SYSPRINT (274) 19
LENGTH (275) 36
ELSE (276) 17
INT_TYPE (277) 21 24 43
BOOLEAN_TYPE (278) 22
STRING_TYPE (279) 2 23
ASSIGN (280) 29
AND (281) 33
LT (282) 34


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
mainClass (43)
    on left: 2, on right: 1
classDeclarations (44)
    on left: 3 4, on right: 1 4
classDeclaration (45)
    on left: 5 6, on right: 4
var_declarations (46)
    on left: 7 8, on right: 5 6 8 12
var_declaration (47)
    on left: 9, on right: 8
method_declarations (48)
    on left: 10 11, on right: 5 6 11
method_declaration (49)
    on left: 12, on right: 11
statements (50)
    on left: 13 14, on right: 12 14 15
statement (51)
    on left: 15 16 17 18 19 20, on right: 2 14 17 18 20
type (52)
    on left: 21 22 23 24, on right: 9 12 28
arguements (53)
    on left: 25 26 27, on right: 12 26
arguement (54)
    on left: 28, on right: 26 27
assignment (55)
    on left: 29, on right: 16
expression (56)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right:
    12 17 18 19 20 29 30 31 32 33 34 35 36 37 43 45 46 48 49
expression_list (57)
    on left: 47 48 49, on right: 37 48


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program    go to state 2
    mainClass  go to state 3


state 1

    2 mainClass: CLASS . ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: mainClass . classDeclarations

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclarations)

    classDeclarations  go to state 7
    classDeclaration   go to state 8


state 4

    2 mainClass: CLASS ID . '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    '{'  shift, and go to state 9


state 5

    0 $accept: program $end .

    $default  accept


state 6

    5 classDeclaration: CLASS . ID '{' var_declarations method_declarations '}'
    6                 | CLASS . ID EXTENDS ID '{' var_declarations method_declarations '}'

    ID  shift, and go to state 10


state 7

    1 program: mainClass classDeclarations .

    $default  reduce using rule 1 (program)


state 8

    4 classDeclarations: classDeclaration . classDeclarations

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclarations)

    classDeclarations  go to state 11
    classDeclaration   go to state 8


state 9

    2 mainClass: CLASS ID '{' . PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    PUBLIC  shift, and go to state 12


state 10

    5 classDeclaration: CLASS ID . '{' var_declarations method_declarations '}'
    6                 | CLASS ID . EXTENDS ID '{' var_declarations method_declarations '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


state 11

    4 classDeclarations: classDeclaration classDeclarations .

    $default  reduce using rule 4 (classDeclarations)


state 12

    2 mainClass: CLASS ID '{' PUBLIC . STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    STATIC  shift, and go to state 15


state 13

    6 classDeclaration: CLASS ID EXTENDS . ID '{' var_declarations method_declarations '}'

    ID  shift, and go to state 16


state 14

    5 classDeclaration: CLASS ID '{' . var_declarations method_declarations '}'

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 7 (var_declarations)

    var_declarations  go to state 20
    var_declaration   go to state 21
    type              go to state 22


state 15

    2 mainClass: CLASS ID '{' PUBLIC STATIC . VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    VOID  shift, and go to state 23


state 16

    6 classDeclaration: CLASS ID EXTENDS ID . '{' var_declarations method_declarations '}'

    '{'  shift, and go to state 24


state 17

   21 type: INT_TYPE . '[' ']'
   24     | INT_TYPE .

    '['  shift, and go to state 25

    $default  reduce using rule 24 (type)


state 18

   22 type: BOOLEAN_TYPE .

    $default  reduce using rule 22 (type)


state 19

   23 type: STRING_TYPE .

    $default  reduce using rule 23 (type)


state 20

    5 classDeclaration: CLASS ID '{' var_declarations . method_declarations '}'

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 10 (method_declarations)

    method_declarations  go to state 27
    method_declaration   go to state 28


state 21

    8 var_declarations: var_declaration . var_declarations

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 7 (var_declarations)

    var_declarations  go to state 29
    var_declaration   go to state 21
    type              go to state 22


state 22

    9 var_declaration: type . ID ';'

    ID  shift, and go to state 30


state 23

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID . MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    MAIN  shift, and go to state 31


state 24

    6 classDeclaration: CLASS ID EXTENDS ID '{' . var_declarations method_declarations '}'

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 7 (var_declarations)

    var_declarations  go to state 32
    var_declaration   go to state 21
    type              go to state 22


state 25

   21 type: INT_TYPE '[' . ']'

    ']'  shift, and go to state 33


state 26

   12 method_declaration: PUBLIC . type ID '(' arguements ')' '{' var_declarations statements RETURN expression ';' '}'

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    type  go to state 34


state 27

    5 classDeclaration: CLASS ID '{' var_declarations method_declarations . '}'

    '}'  shift, and go to state 35


state 28

   11 method_declarations: method_declaration . method_declarations

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 10 (method_declarations)

    method_declarations  go to state 36
    method_declaration   go to state 28


state 29

    8 var_declarations: var_declaration var_declarations .

    $default  reduce using rule 8 (var_declarations)


state 30

    9 var_declaration: type ID . ';'

    ';'  shift, and go to state 37


state 31

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN . '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    '('  shift, and go to state 38


state 32

    6 classDeclaration: CLASS ID EXTENDS ID '{' var_declarations . method_declarations '}'

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 10 (method_declarations)

    method_declarations  go to state 39
    method_declaration   go to state 28


state 33

   21 type: INT_TYPE '[' ']' .

    $default  reduce using rule 21 (type)


state 34

   12 method_declaration: PUBLIC type . ID '(' arguements ')' '{' var_declarations statements RETURN expression ';' '}'

    ID  shift, and go to state 40


state 35

    5 classDeclaration: CLASS ID '{' var_declarations method_declarations '}' .

    $default  reduce using rule 5 (classDeclaration)


state 36

   11 method_declarations: method_declaration method_declarations .

    $default  reduce using rule 11 (method_declarations)


state 37

    9 var_declaration: type ID ';' .

    $default  reduce using rule 9 (var_declaration)


state 38

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' . STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    STRING_TYPE  shift, and go to state 41


state 39

    6 classDeclaration: CLASS ID EXTENDS ID '{' var_declarations method_declarations . '}'

    '}'  shift, and go to state 42


state 40

   12 method_declaration: PUBLIC type ID . '(' arguements ')' '{' var_declarations statements RETURN expression ';' '}'

    '('  shift, and go to state 43


state 41

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE . '[' ']' ID ')' '{' statement '}' '}'

    '['  shift, and go to state 44


state 42

    6 classDeclaration: CLASS ID EXTENDS ID '{' var_declarations method_declarations '}' .

    $default  reduce using rule 6 (classDeclaration)


state 43

   12 method_declaration: PUBLIC type ID '(' . arguements ')' '{' var_declarations statements RETURN expression ';' '}'

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 25 (arguements)

    type        go to state 45
    arguements  go to state 46
    arguement   go to state 47


state 44

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' . ']' ID ')' '{' statement '}' '}'

    ']'  shift, and go to state 48


state 45

   28 arguement: type . ID

    ID  shift, and go to state 49


state 46

   12 method_declaration: PUBLIC type ID '(' arguements . ')' '{' var_declarations statements RETURN expression ';' '}'

    ')'  shift, and go to state 50


state 47

   26 arguements: arguement . ',' arguements
   27           | arguement .

    ','  shift, and go to state 51

    $default  reduce using rule 27 (arguements)


state 48

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' . ID ')' '{' statement '}' '}'

    ID  shift, and go to state 52


state 49

   28 arguement: type ID .

    $default  reduce using rule 28 (arguement)


state 50

   12 method_declaration: PUBLIC type ID '(' arguements ')' . '{' var_declarations statements RETURN expression ';' '}'

    '{'  shift, and go to state 53


state 51

   26 arguements: arguement ',' . arguements

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 25 (arguements)

    type        go to state 45
    arguements  go to state 54
    arguement   go to state 47


state 52

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID . ')' '{' statement '}' '}'

    ')'  shift, and go to state 55


state 53

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' . var_declarations statements RETURN expression ';' '}'

    INT_TYPE      shift, and go to state 17
    BOOLEAN_TYPE  shift, and go to state 18
    STRING_TYPE   shift, and go to state 19

    $default  reduce using rule 7 (var_declarations)

    var_declarations  go to state 56
    var_declaration   go to state 21
    type              go to state 22


state 54

   26 arguements: arguement ',' arguements .

    $default  reduce using rule 26 (arguements)


state 55

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' . '{' statement '}' '}'

    '{'  shift, and go to state 57


state 56

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations . statements RETURN expression ';' '}'

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    $default  reduce using rule 13 (statements)

    statements  go to state 63
    statement   go to state 64
    assignment  go to state 65


state 57

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' . statement '}' '}'

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    statement   go to state 66
    assignment  go to state 65


state 58

   20 statement: ID . '[' expression ']' statement ';'
   29 assignment: ID . ASSIGN expression

    '['     shift, and go to state 67
    ASSIGN  shift, and go to state 68


state 59

   17 statement: IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 69


state 60

   18 statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 70


state 61

   19 statement: SYSPRINT . '(' expression ')' ';'

    '('  shift, and go to state 71


state 62

   15 statement: '{' . statements '}'

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    $default  reduce using rule 13 (statements)

    statements  go to state 72
    statement   go to state 64
    assignment  go to state 65


state 63

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements . RETURN expression ';' '}'

    RETURN  shift, and go to state 73


state 64

   14 statements: statement . statements

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    $default  reduce using rule 13 (statements)

    statements  go to state 74
    statement   go to state 64
    assignment  go to state 65


state 65

   16 statement: assignment . ';'

    ';'  shift, and go to state 75


state 66

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement . '}' '}'

    '}'  shift, and go to state 76


state 67

   20 statement: ID '[' . expression ']' statement ';'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 85


state 68

   29 assignment: ID ASSIGN . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 86


state 69

   17 statement: IF '(' . expression ')' statement ELSE statement

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 87


state 70

   18 statement: WHILE '(' . expression ')' statement

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 88


state 71

   19 statement: SYSPRINT '(' . expression ')' ';'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 89


state 72

   15 statement: '{' statements . '}'

    '}'  shift, and go to state 90


state 73

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements RETURN . expression ';' '}'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 91


state 74

   14 statements: statement statements .

    $default  reduce using rule 14 (statements)


state 75

   16 statement: assignment ';' .

    $default  reduce using rule 16 (statement)


state 76

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' . '}'

    '}'  shift, and go to state 92


state 77

   38 expression: INTEGER .

    $default  reduce using rule 38 (expression)


state 78

   41 expression: ID .

    $default  reduce using rule 41 (expression)


state 79

   39 expression: TRUE .

    $default  reduce using rule 39 (expression)


state 80

   40 expression: FALSE .

    $default  reduce using rule 40 (expression)


state 81

   43 expression: NEW . INT_TYPE '[' expression ']'
   44           | NEW . ID '(' ')'

    ID        shift, and go to state 93
    INT_TYPE  shift, and go to state 94


state 82

   42 expression: THIS .

    $default  reduce using rule 42 (expression)


state 83

   45 expression: '!' . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 95


state 84

   46 expression: '(' . expression ')'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 96


state 85

   20 statement: ID '[' expression . ']' statement ';'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    ']'  shift, and go to state 99
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104


state 86

   29 assignment: ID ASSIGN expression .
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104

    $default  reduce using rule 29 (assignment)


state 87

   17 statement: IF '(' expression . ')' statement ELSE statement
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104
    ')'  shift, and go to state 105


state 88

   18 statement: WHILE '(' expression . ')' statement
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104
    ')'  shift, and go to state 106


state 89

   19 statement: SYSPRINT '(' expression . ')' ';'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104
    ')'  shift, and go to state 107


state 90

   15 statement: '{' statements '}' .

    $default  reduce using rule 15 (statement)


state 91

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements RETURN expression . ';' '}'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104
    ';'  shift, and go to state 108


state 92

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}' .

    $default  reduce using rule 2 (mainClass)


state 93

   44 expression: NEW ID . '(' ')'

    '('  shift, and go to state 109


state 94

   43 expression: NEW INT_TYPE . '[' expression ']'

    '['  shift, and go to state 110


state 95

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'
   45           | '!' expression .

    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104

    $default  reduce using rule 45 (expression)


state 96

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'
   46           | '(' expression . ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104
    ')'  shift, and go to state 111


state 97

   36 expression: expression '.' . LENGTH
   37           | expression '.' . ID '(' expression_list ')'

    ID      shift, and go to state 112
    LENGTH  shift, and go to state 113


state 98

   35 expression: expression '[' . expression ']'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 114


state 99

   20 statement: ID '[' expression ']' . statement ';'

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    statement   go to state 115
    assignment  go to state 65


state 100

   33 expression: expression AND . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 116


state 101

   34 expression: expression LT . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 117


state 102

   30 expression: expression '+' . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 118


state 103

   31 expression: expression '-' . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 119


state 104

   32 expression: expression '*' . expression

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 120


state 105

   17 statement: IF '(' expression ')' . statement ELSE statement

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    statement   go to state 121
    assignment  go to state 65


state 106

   18 statement: WHILE '(' expression ')' . statement

    ID        shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    statement   go to state 122
    assignment  go to state 65


state 107

   19 statement: SYSPRINT '(' expression ')' . ';'

    ';'  shift, and go to state 123


state 108

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements RETURN expression ';' . '}'

    '}'  shift, and go to state 124


state 109

   44 expression: NEW ID '(' . ')'

    ')'  shift, and go to state 125


state 110

   43 expression: NEW INT_TYPE '[' . expression ']'

    INTEGER  shift, and go to state 77
    ID       shift, and go to state 78
    TRUE     shift, and go to state 79
    FALSE    shift, and go to state 80
    NEW      shift, and go to state 81
    THIS     shift, and go to state 82
    '!'      shift, and go to state 83
    '('      shift, and go to state 84

    expression  go to state 126


state 111

   46 expression: '(' expression ')' .

    $default  reduce using rule 46 (expression)


state 112

   37 expression: expression '.' ID . '(' expression_list ')'

    '('  shift, and go to state 127


state 113

   36 expression: expression '.' LENGTH .

    $default  reduce using rule 36 (expression)


state 114

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   35           | expression '[' expression . ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    ']'  shift, and go to state 128
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104


state 115

   20 statement: ID '[' expression ']' statement . ';'

    ';'  shift, and go to state 129


state 116

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   33           | expression AND expression .
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104

    $default  reduce using rule 33 (expression)


state 117

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   34           | expression LT expression .
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104

    $default  reduce using rule 34 (expression)


state 118

   30 expression: expression . '+' expression
   30           | expression '+' expression .
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '*'  shift, and go to state 104

    $default  reduce using rule 30 (expression)


state 119

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   31           | expression '-' expression .
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    '*'  shift, and go to state 104

    $default  reduce using rule 31 (expression)


state 120

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   32           | expression '*' expression .
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'

    $default  reduce using rule 32 (expression)


state 121

   17 statement: IF '(' expression ')' statement . ELSE statement

    ELSE  shift, and go to state 130


state 122

   18 statement: WHILE '(' expression ')' statement .

    $default  reduce using rule 18 (statement)


state 123

   19 statement: SYSPRINT '(' expression ')' ';' .

    $default  reduce using rule 19 (statement)


state 124

   12 method_declaration: PUBLIC type ID '(' arguements ')' '{' var_declarations statements RETURN expression ';' '}' .

    $default  reduce using rule 12 (method_declaration)


state 125

   44 expression: NEW ID '(' ')' .

    $default  reduce using rule 44 (expression)


state 126

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . AND expression
   34           | expression . LT expression
   35           | expression . '[' expression ']'
   36           | expression . '.' LENGTH
   37           | expression . '.' ID '(' expression_list ')'
   43           | NEW INT_TYPE '[' expression . ']'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    ']'  shift, and go to state 131
    AND  shift, and go to state 100
    LT   shift, and go to state 101
    '+'  shift, and go to state 102
    '-'  shift, and go to state 103
    '*'  shift, and go to state 104


state 127
